--- a/.github/workflows/kraken.yml
+++ b/.github/workflows/kraken.yml
@@ -20,7 +20,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: install kraken
-        run: conda create -y -n kraken -conda-forge -c bioconda kraken
+        run: conda create -y -n kraken -c conda-forge -c bioconda kraken
       - uses: actions/checkout@v2
         with:
           repository: broadinstitute/viral-classify
