--- a/.github/workflows/kraken.yml
+++ b/.github/workflows/kraken.yml
@@ -39,9 +39,9 @@ jobs:
          kraken-build --version
          kraken-build --build --kmer-len 11 --minimizer-len 5 --db db
          
-         #kraken2-inspect --help
-         #kraken2-inspect --version
-         #kraken2-inspect --db db
+         kraken-inspect --help
+         kraken-inspect --version
+         kraken-inspect --db db
          
-         #kraken2 --db db --report report.txt --report-zero-counts in.fastq
-         #grep "root" report.txt
+         kraken --db db --report report.txt --report-zero-counts in.fastq
+         grep "root" report.txt
