--- a/.github/workflows/kraken2.yml
+++ b/.github/workflows/kraken2.yml
@@ -19,24 +19,30 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: install kraken2
+      - name: Install kraken2
         run: conda create -y -n kraken2 -c conda-forge -c bioconda kraken2
       - uses: actions/checkout@v2
         with:
           repository: broadinstitute/viral-classify
           path: viral-classify
-      - name: test kraken2
+      - name: Staging
         run: |
-         export PATH=$CONDA/envs/kraken2/bin:$PATH
-         mv $GITHUB_WORKSPACE/viral-classify/test/input/TestMetagenomicsViralMix/db ./
-         mv $GITHUB_WORKSPACE/viral-classify/test/input/TestSplitReads/in.fastq ./
-         which kraken2
-         kraken2-build --help
-         kraken2-build --version
-         kraken2-build --build --db db
+          echo "${CONDA}/envs/kraken2/bin" >> $GITHUB_PATH
+          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestMetagenomicsViralMix/db ./
+          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestSplitReads/in.fastq ./
+      - name: Test kraken2-build
+        run: |
+          which kraken2-build
+          kraken2-build --help
+          kraken2-build --version
+          kraken2-build --build --db db
+      - name: Test kraken2-inspect
+        run: |
          kraken2-inspect --help
          kraken2-inspect --version
          kraken2-inspect --db db
+      - name: Test kraken2
+        run: |
          kraken2 --version
          kraken2 --help
          kraken2 --db db --report report.txt --report-zero-counts in.fastq
