--- a/.github/workflows/kraken.yml
+++ b/.github/workflows/kraken.yml
@@ -19,29 +19,26 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: install kraken
+      - name: Install kraken
         run: conda create -y -n kraken -c conda-forge -c bioconda kraken
       - uses: actions/checkout@v2
         with:
           repository: broadinstitute/viral-classify
           path: viral-classify
-      - name: test kraken
+      - name: Staging
         run: |
-         export PATH=$CONDA/envs/kraken/bin:$PATH
-         which kraken
+         echo "${CONDA}/envs/kraken2/bin" >> $GITHUB_PATH
          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestMetagenomicsViralMix/db ./
          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestSplitReads/in.fastq ./
-         
-         kraken --version
-         kraken --help
-         
+      - name: Test kraken-build
+        run: |
+         which kraken-build
          kraken-build --help
          kraken-build --version
          kraken-build --build --kmer-len 11 --minimizer-len 5 --db db
-         
-         kraken-inspect --help
-         kraken-inspect --version
-         kraken-inspect --db db
-         
-         kraken --db db --report report.txt --report-zero-counts in.fastq
-         grep "root" report.txt
+      - name: Test kraken
+        run: |
+         which kraken
+         kraken --version
+         kraken --help        
+         kraken --db db in.fastq
