--- a/.github/workflows/kraken.yml
+++ b/.github/workflows/kraken.yml
@@ -27,7 +27,7 @@ jobs:
           path: viral-classify
       - name: Staging
         run: |
-         echo "${CONDA}/envs/kraken2/bin" >> $GITHUB_PATH
+         echo "${CONDA}/envs/kraken/bin" >> $GITHUB_PATH
          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestMetagenomicsViralMix/db ./
          mv $GITHUB_WORKSPACE/viral-classify/test/input/TestSplitReads/in.fastq ./
       - name: Test kraken-build
