--- a/.github/workflows/kraken.yml
+++ b/.github/workflows/kraken.yml
@@ -55,4 +55,5 @@ jobs:
          kraken-mpa-report --version
          kraken-mpa-report --help        
          kraken-mpa-report --db db --show-zeros kraken.out > kraken.mpa-report
+         cat kraken.mpa-report
          grep "root" kraken.mpa-report
